hphp/test/quick/ns_invalid_class.php.expectf

Fatal error: Failure to resolve undefined class B in %s on line 5
